<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forest_green"
    android:gravity="center"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_update_your_item"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/String_item_name"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/string_item_description"
                android:textColor="@color/white"

                android:textSize="16dp" />

            <EditText
                android:id="@+id/edt_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/string_enter_barcode"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/edt_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/string_quantity"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/edt_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/string_enter_price"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button_update"
                android:text="@string/string_update_item"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button_update"
                android:text="@string/string_delete_item"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
