<?xml version="1.0" encoding="utf-8"?>
<!-- Implemented by Bilha Ghedeon-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_scan"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitCenter"
                android:src="@drawable/barcode"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/txt_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/string_scan"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/dark_green"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/String_item_name"
                android:textAlignment="center"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:hint="@string/string_item_description"
                android:textAlignment="center"
                android:textSize="10dp" />

            <EditText
                android:id="@+id/edt_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/string_enter_barcode"
                android:textAlignment="center"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/edt_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/string_quantity"
                android:inputType="number"
                android:textAlignment="center"

                android:textSize="13dp" />

            <EditText
                android:id="@+id/edt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:hint="@string/string_enter_price"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="13dp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:paddingHorizontal="100dp"
                android:text="ADD ITEM"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>

