<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/chicago"
    android:backgroundTint="@color/grey_tint"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_organize_your_life"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/string_btn_add_entry"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_check_inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/string_btn_check_inventory"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_daily_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/string_btn_daily_report"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>

